# University_Unit

./: README.md
University_Unit/: CMakeLists.txt  Person.cpp  Person.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  Time.cpp  Time.h  main.cpp
University_Unit/DateTime/: Date.cpp  Date.h  DateTime_Test.cpp  Time.cpp  Time.h
University_Unit/Location/: Location.cpp  Location.h  Location_Test.cpp
University_Unit/MainOperation/: LocationOperation.cpp  LocationOperation.h  SectionOperation.cpp  SectionOperation.h  StudentOperation.cpp  StudentOperation.h  TeacherOperation.cpp  TeacherOperation.h
University_Unit/Menu/: Menu.cpp  Menu.h
University_Unit/People/: People_Test.cpp  Person.cpp  Person.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h
University_Unit/Section/: Section.cpp  Section.h  Section_Test.cpp
